--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -479,6 +479,19 @@ td button:hover{
 <thead><tr><th>Loại</th><th>Chi tiết</th><th>SL</th><th>Thao tác</th></tr></thead>
 <tbody id="cartTable"></tbody>
 </table>
+<label>📝 Ghi chú cho đơn hàng</label>
+<textarea id="orderNote"
+  placeholder="Ví dụ: ít cay, giao sớm giúp em, gọi trước khi tới..."
+  style="
+    width:100%;
+    min-height:100px;
+    padding:14px 16px;
+    border-radius:12px;
+    border:2px solid #e0e0e0;
+    font-family:'Poppins',sans-serif;
+    font-size:14px;
+    resize:vertical;
+  "></textarea>
 <button onclick="submitCart()">✅ Xác nhận đặt hàng</button>
 </div>
 
@@ -745,6 +758,7 @@ btn.textContent='⏳ Đang gửi...';
 const data={
 customer:customer,
 cart:cart,
+note: document.getElementById('orderNote').value || '',
 timestamp:new Date().toISOString()
 };
 
