--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -415,12 +415,12 @@ td button:hover{
 
 <div class="card">
 <h2>👤 Thông tin nhận hàng</h2>
-<label>👤 Tên khách *</label><input id="customerName" placeholder="Nhập tên của bạn">
-<label>🏫 Lớp / địa chỉ *</label><input id="classAddress" placeholder="Nhập lớp hoặc địa chỉ">
-<label>📱 Facebook *</label><input id="campName" placeholder="Nhập tên Facebook">
+<label>👤 Tên khách *</label><input id="customerName" placeholder="Chẳng hay cao danh quý tánh của bằng hữu đây là chi?">
+<label>🏫 Lớp / địa chỉ *</label><input id="classAddress" placeholder="Phủ đệ của vị bằng hữu đây tọa lạc nơi nào?">
+<label>📱 Facebook *</label><input id="campName" placeholder="Bằng hữu có sử dụng 'Phiên Bản Thủ Chưởng' (Facebook) không, xin hãy để lại một đường dẫn để tiện bề liên lạc?">
 <label>⏰ Khung giờ *</label>
 <select id="pickupTime">
-<option value="">-- Chọn khung giờ --</option>
+<option value="">--Vị bằng hữu đây định vào giờ lành nào thì chúng ta có thể tương phùng--</option>
 <option>8:00 – 9:00</option>
 <option>9:00 – 10:00</option>
 <option>10:00 – 11:00</option>
@@ -807,6 +807,7 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
 
 
