--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -415,9 +415,9 @@ td button:hover{
 
 <div class="card">
 <h2>👤 Thông tin nhận hàng</h2>
-<label>👤 Tên khách *</label><input id="customerName" placeholder="Chẳng hay cao danh quý tánh của bằng hữu đây là chi?">
-<label>🏫 Lớp / địa chỉ *</label><input id="classAddress" placeholder="Phủ đệ của vị bằng hữu đây tọa lạc nơi nào?">
-<label>📱 Facebook *</label><input id="campName" placeholder="Xin cho ta biết 'mật danh' của vị anh đài trên 'Mặt Sách' để tiện bề liên lạc?">
+<label>Chẳng hay cao danh quý tánh của bằng hữu đây là chi?*</label><input id="customerName" placeholder="">
+<label>🏫 Phủ đệ của vị bằng hữu đây tọa lạc nơi nào *</label><input id="classAddress" placeholder="">
+<label>📱 "Bằng hữu có sử dụng 'Phiên Bản Thủ Chưởng' thì xin hãy để lại một đường dẫn để tiện bề liên lạc *</label><input id="campName" placeholder="Link Facebook">
 <label>⏰ Khung giờ *</label>
 <select id="pickupTime">
 <option value="">--Vị bằng hữu đây định giờ lành nào thì chúng ta tương phùng--</option>
@@ -806,6 +806,7 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
 
 
