--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -418,9 +418,9 @@ td button:hover{
 <label>Chẳng hay cao danh quý tánh của bằng hữu đây là chi?*</label><input id="customerName" placeholder="">
 <label>🏫 Phủ đệ của vị bằng hữu đây tọa lạc nơi nào *</label><input id="classAddress" placeholder="">
 <label>📱 "Bằng hữu có sử dụng 'Phiên Bản Thủ Chưởng' thì xin hãy để lại một đường dẫn để tiện bề liên lạc *</label><input id="campName" placeholder="Link Facebook">
-<label>⏰ Khung giờ *</label>
+<label>⏰ Vị bằng hữu đây định giờ lành nào thì chúng ta tương phùng*</label>
 <select id="pickupTime">
-<option value="">--Vị bằng hữu đây định giờ lành nào thì chúng ta tương phùng--</option>
+<option value="">--Chuyện này hệ trọng, xin chớ quyết định khinh suất!--</option>
 <option>8:00 – 9:00</option>
 <option>9:00 – 10:00</option>
 <option>10:00 – 11:00</option>
@@ -806,6 +806,7 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
 
 
