--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🍽️ Đặt món hội trại</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap&subset=vietnamese" rel="stylesheet">
 <style>
 *{box-sizing:border-box}
 
@@ -18,6 +17,7 @@
   0%,100%{transform:translateY(0)}
   50%{transform:translateY(-10px)}
 }
+
 
 @keyframes slideIn{
   from{opacity:0;transform:translateY(20px)}
@@ -57,12 +57,23 @@ body::before{
 }
 
 .header{
-  text-align:center;
+  text-align: center ;
   padding:30px 20px 20px;
   color:#fff;
   position:relative;
   z-index:1;
   animation:slideIn 0.6s ease;
+}
+.text-gradient{
+  background: linear-gradient(135deg,#ff6b6b,#ffa500);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.emoji{
+  -webkit-text-fill-color: initial;
+  color: initial;
 }
 
 .header h1{
@@ -71,10 +82,8 @@ body::before{
   font-weight:800;
   text-shadow:2px 2px 10px rgba(0,0,0,.3);
   letter-spacing:1px;
-  background:linear-gradient(45deg,#fff,#ffeaa7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
   background-clip:text;
+  color: ghostwhite;
 }
 
 .header p{
@@ -82,6 +91,7 @@ body::before{
   font-size:1.1em;
   opacity:.95;
   font-weight:300;
+  color: ghostwhite;
 }
 
 nav{
@@ -401,7 +411,10 @@ td button:hover{
 <body>
 
 <div class="header">
-<h1>🍽️ Đặt Món Hội Trại</h1>
+<h1>
+  <span class="emoji">🍽️</span>
+  <span style="color: white;">Đặt Món Hội Trại</span>
+</h1>
 <p>Chọn món yêu thích của bạn ngay hôm nay!</p>
 </div>
 
@@ -414,28 +427,71 @@ td button:hover{
 <div class="container">
 
 <div class="card">
-<h2>👤 Thông tin nhận hàng</h2>
-<label>Chẳng hay cao danh quý tánh của bằng hữu đây là chi?*</label><input id="customerName" placeholder="">
-<label>🏫 Phủ đệ của vị bằng hữu đây tọa lạc nơi nào *</label><input id="classAddress" placeholder="">
-<label>📱 "Bằng hữu có sử dụng 'Phiên Bản Thủ Chưởng' thì xin hãy để lại một đường dẫn để tiện bề liên lạc *</label><input id="campName" placeholder="Link Facebook">
-<label>🚚 Phương thức nhận hàng</label>
+<h2> <span class="emoji">🧑</span> 
+<span> Thông tin nhận hàng </span></h2>
+<label>Cho mình xin tên xinh iu của bạn nhá <span class="emoji">❤ </span></label><input id="customerName" placeholder="">
+<label>Bạn ở lớp nào vậy he 😊</label>
+<select id="classAddress" required>
+  <option value="" disabled selected>-- Chọn lớp --</option>
+
+  <!-- Khối 10 -->
+  <option value="10 Toán 1">10 Toán 1</option>
+  <option value="10 Toán 2">10 Toán 2</option>
+  <option value="10 Văn">10 Văn</option>
+  <option value="10 Anh 1">10 Anh 1</option>
+  <option value="10 Anh 2">10 Anh 2</option>
+  <option value="10 Lý">10 Lý</option>
+  <option value="10 Hóa">10 Hóa</option>
+  <option value="10 Sinh">10 Sinh</option>
+  <option value="10 Địa">10 Địa</option>
+  <option value="10 Tin">10 Tin</option>
+
+  <!-- Khối 11 -->
+  <option value="11 Toán 1">11 Toán 1</option>
+  <option value="11 Toán 2">11 Toán 2</option>
+  <option value="11 Văn">11 Văn</option>
+  <option value="11 Anh 1">11 Anh 1</option>
+  <option value="11 Anh 2">11 Anh 2</option>
+  <option value="11 Lý">11 Lý</option>
+  <option value="11 Hóa">11 Hóa</option>
+  <option value="11 Sinh 1">11 Sinh 1</option>
+  <option value="11 Sinh 2">11 Sinh 2</option>
+  <option value="11 Địa">11 Địa</option>
+  <option value="11 Tin">11 Tin</option>
+
+  <!-- Khối 12 -->
+  <option value="12 Toán 1">12 Toán 1</option>
+  <option value="12 Toán 2">12 Toán 2</option>
+  <option value="12 Văn">12 Văn</option>
+  <option value="12 Anh 1">12 Anh 1</option>
+  <option value="12 Anh 2">12 Anh 2</option>
+  <option value="12 Lý">12 Lý</option>
+  <option value="12 Hóa">12 Hóa</option>
+  <option value="12 Sinh">12 Sinh</option>
+  <option value="12 Địa">12 Địa</option>
+  <option value="12 Tin">12 Tin</option>
+</select>
+<label>📱 Cho mình xin phương thức liên lạc để tiện liên hệ nhé 😘*</label><input id="campName" placeholder="Link Facebook">
+<label>🚚 Bạn muốn nhận hàng theo phương thức nào cho tiện nè 😍</label>
 <select id="nhanHang">
   <option value="">-- Chọn phương thức--</option>
   <option value="Giao hàng">Giao hàng</option>
   <option value="Đến trại lấy">Tự thân đến nhận</option>
 </select>
-<label>⏰ Vị bằng hữu đây định giờ lành nào thì chúng ta tương phùng*</label>
+<label>⏰ Bạn rảnh lúc nào để mình không làm phiền bạn nha 💕*</label>
 <select id="pickupTime">
 <option value="">--Chuyện này hệ trọng, xin chớ quyết định khinh suất!--</option>
-<option>8:00 – 9:00</option>
-<option>9:00 – 10:00</option>
-<option>10:00 – 11:00</option>
+<option>10:30-11h30</option>
+<option>11h30-12h30</option>
 </select>
 <button onclick="saveCustomer()">💾 Lưu thông tin</button>
 </div>
 
 <div id="single" class="card">    
-<h2>🍴 Món lẻ</h2>
+<h2>
+  <span class="emoji">🍴</span>
+  <span class="text-gradient">Món lẻ</span>
+</h2>
 <select id="singleItem" onchange="drinkOpt.classList.toggle('hidden',!this.value.includes('Trà chanh dây'))">
 <option disabled selected>🍽️ Vui lòng chọn món</option>
 <option>🍗 Gà</option>
@@ -460,7 +516,10 @@ td button:hover{
 </div>
 
 <div id="combo" class="card hidden">
-<h2>🎁 Combo</h2>
+<h2>
+  <span class="emoji">🎁</span>
+  <span class="text-gradient">Combo</span>
+</h2>
 <select id="comboType" onchange="renderCombo()">
 <option disabled selected>🎁 Vui lòng chọn combo</option>
 <option>🎁 Combo 1 gà 1 nước</option>
@@ -479,7 +538,10 @@ td button:hover{
 </div>
 
 <div id="cart" class="card hidden">
-<h2>🛒 Giỏ hàng</h2>
+<h2>
+  <span class="emoji">🛒</span>
+  <span class="text-gradient">Giỏ hàng</span>
+</h2>
 <table>
 <thead><tr><th>Loại</th><th>Chi tiết</th><th>SL</th><th>Thao tác</th></tr></thead>
 <tbody id="cartTable"></tbody>
