--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🍽️ Đặt món hội trại</title>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap&subset=vietnamese" rel="stylesheet">
-<link rel="icon" type="image/x-icon" href="Logo lớp.ico">>
+<link rel="icon" type="image/x-icon" href="Logo lớp.ico">
 <style>
 *{box-sizing:border-box}
 
@@ -932,4 +932,5 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
