--- a/huong-dan.html
+++ b/huong-dan.html
@@ -178,7 +178,7 @@
 
   <!-- CTA -->
   <div class="cta">
-    <a href="index.html">👉 BẮT ĐẦU ĐẶT MÓN NGAY</a>
+    <a href="dat-hang-trai-xuan.html">👉 BẮT ĐẦU ĐẶT MÓN NGAY</a>
   </div>
 
   <footer>
@@ -189,3 +189,4 @@
 
 </body>
 </html>
+
