--- a/huong-dan.html
+++ b/huong-dan.html
@@ -178,7 +178,7 @@
 
   <!-- CTA -->
   <div class="cta">
-    <a href="dat-hang-trai-xuan.html">👉 BẮT ĐẦU ĐẶT MÓN NGAY</a>
+    <a href="https://ninvuituoihihi-sudo.github.io/Colenbantoi/dat-hang-trai-xuan.html">👉 BẮT ĐẦU ĐẶT MÓN NGAY</a>
   </div>
 
   <footer>
@@ -189,4 +189,5 @@
 
 </body>
 </html>
+
 
