--- a/thankyou.html
+++ b/thankyou.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <title>Cảm ơn</title>
 
 <style>
@@ -121,3 +122,4 @@ p{
 
 </body>
 </html>
+
