--- a/huong-dan.html
+++ b/huong-dan.html
@@ -7,6 +7,7 @@
 
   <!-- Font dễ đọc, hỗ trợ tiếng Việt -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <style>
     body{
@@ -189,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
