--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -775,7 +775,7 @@ function addCombo(){
   let chiTiet = {};
 
   // ===== COMBO 1: gà + nước (BẮT BUỘC CÓ ĐÁ + THẠCH) =====
-  if(comboType.value === '🎁 Combo 1 gà 1 nước'){
+  if(comboType.value === '🎁 Combo classic'){
     chiTiet = {
       da: cIce.value,
       thach: cJelly.value
@@ -790,7 +790,7 @@ function addCombo(){
   }
 
   // ===== COMBO 3: GÌ CŨNG CÓ =====
-  else if(comboType.value === '🎁 Combo gì cũng có'){
+  else if(comboType.value === '🎁 Combo tổng hợp'){
     chiTiet = {
       da: cIce.value,
       thach: cJelly.value,
@@ -933,6 +933,7 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
 
 
