--- a/huong-dan.html
+++ b/huong-dan.html
@@ -183,13 +183,14 @@
   </div>
 
   <footer>
-    © Xuân Sang Làng Tý • Nếu cần hỗ trợ, cứ hỏi thông qua fanpage nhé 💬
+    © Bếp Nhà Tý • Nếu cần hỗ trợ, cứ hỏi thông qua fanpage nhé 💬
   </footer>
 
 </div>
 
 </body>
 </html>
+
 
 
 
