--- a/dat-hang-trai-xuan.html
+++ b/dat-hang-trai-xuan.html
@@ -483,7 +483,7 @@ td button:hover{
 <label>⏰ Bạn rảnh lúc nào để mình không làm phiền bạn nha 💕*</label>
 <select id="pickupTime">
 <option value="">--Chuyện này hệ trọng, xin chớ quyết định khinh suất!--</option>
-<option>10:30-11h30</option>
+<option>10h30-11h30</option>
 <option>11h30-12h30</option>
 </select>
 <button onclick="saveCustomer()">💾 Lưu thông tin</button>
@@ -933,6 +933,7 @@ location.href='thankyou.html';
 
 </body>
 </html>
+
 
 
 
