--- a/thankyou.html
+++ b/thankyou.html
@@ -1,126 +1,88 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/x-icon" href="./favicon.ico">
-<title>Cảm ơn</title>
+  <meta charset="UTF-8">
+  <title>Thông báo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body{
-  font-family: Arial, sans-serif;
-  background:#f4f4f4;
-  margin:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  height:100vh;
-}
+  <!-- Font Open Sans (không lỗi tiếng Việt) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
-.card{
-  background:#fff;
-  padding:40px 36px;
-  border-radius:18px;
-  text-align:center;
-  box-shadow:0 8px 24px rgba(0,0,0,0.15);
-  max-width:420px;
-  width:92%;
-}
+  <style>
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: ghostwhite;
+      font-family: 'Open Sans', sans-serif;
+    }
 
-/* Ảnh */
-.thank-img{
-  width:160px;
-  height:160px;
-  border-radius:50%;
-  object-fit:cover;
-  margin-bottom:16px;
-  box-shadow:0 6px 16px rgba(0,0,0,.25);
-}
+    .card {
+      background: #ffffff;
+      padding: 36px 28px;
+      max-width: 420px;
+      text-align: center;
+      border-radius: 16px;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.1);
+      animation: fadeIn 0.6s ease;
+    }
 
-h1{
-  color:#ff5722;
-  margin-bottom:6px;
-}
+    h1 {
+      margin: 0 0 14px;
+      font-size: 24px;
+      color: #2c3e50;
+    }
 
-.thank-name{
-  font-weight:700;
-  font-size:16px;
-  margin-bottom:10px;
-}
+    p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #444;
+      margin-bottom: 24px;
+    }
 
-p{
-  font-size:15px;
-  line-height:1.5;
-  margin:0;
-}
+    .emoji {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
 
-.back-btn{
-  margin:30px auto 0;
-  padding:18px 28px;
-  width:100%;
-  max-width:420px;
+    .camp {
+      display: inline-block;
+      padding: 10px 18px;
+      border-radius: 999px;
+      background: #ff5722;
+      color: #fff;
+      font-weight: 600;
+      font-size: 15px;
+      box-shadow: 0 4px 12px rgba(255,87,34,0.35);
+    }
 
-  border:none;
-  border-radius:999px;
-  background:#ff5722;
-  color:#fff;
-  cursor:pointer;
-
-  display:flex;
-  flex-direction:column;      /* 🔥 chia 2 dòng */
-  align-items:center;
-  justify-content:center;
-  gap:6px;
-
-  font-size:17px;
-  font-weight:600;
-  line-height:1.4;
-  text-align:center;
-
-  box-shadow:0 6px 18px rgba(255,87,34,.45);
-}
-
-.btn-text{
-  display:block;
-}
-
-.btn-emoji{
-  font-size:20px;
-}
-
-
-.icon{
-  font-size:18px;
-}
-</style>
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(12px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="card">
-
-  <!-- Ảnh -->
-  <img src="MemeTienDat.jpg" alt="Tien Dat" class="thank-img">
-
-  <h1>Cảm ơn bạn!</h1>
-  <div class="thank-name">Tien Dat xin cảm ơn 🙇‍♂️</div>
-
-  <p>
-    Đơn hàng đã được ghi nhận.<br>
-    Chúc bạn Hội Trại Xuân ăn no – chơi vui – cười hoài 😆🌸
-  </p>
-
-  <button class="back-btn" onclick="window.location.href='dat-hang-trai-xuan.html'">
-  <span class="btn-text">← Thích (TienDat) quá thì quay lại thôi</span>
-  <span class="btn-emoji">😍</span>
-</button>
-
-
-
-
-</div>
+  <div class="card">
+    <div class="emoji">🙏✨</div>
+    <h1>Duyên đã đủ</h1>
+    <p>
+      Các tại hạ có lòng thì hãy ghé<br>
+      <strong>trại 26</strong> để ủng hộ chúng tôi nhé
+    </p>
+    <div class="camp">🏕️ Trại 26</div>
+  </div>
 
 </body>
 </html>
-
-
